@@ -51,6 +51,7 @@ module Thin
         server.timeout                        = @options[:timeout]
         server.maximum_connections            = @options[:max_conns]
         server.maximum_persistent_connections = @options[:max_persistent_conns]
+        server.threaded                       = @options[:threaded]
 
         # Detach the process, after this line the current process returns
         server.daemonize if @options[:daemonize]
