@@ -107,6 +107,7 @@ module Thin
         opts.on(      "--max-persistent-conns NUM",
                                        "Maximum number of persistent connections",
                                        "(default: #{@options[:max_persistent_conns]})") { |num| @options[:max_persistent_conns] = num.to_i }
+        opts.on(      "--threaded", "Call the Rack application in threads")             { @options[:threaded] = true }
         
         opts.separator ""
         opts.separator "Common options:"
